include(CTest)
find_package(UnitTest++)

if (UnitTest++_FOUND)
  include_directories(${UTPP_INCLUDE_DIRS})

  add_executable (test_tsdata tsdata.cc tsdata_cpp.cc)
  add_executable (test_replacement_map replacement_map.cc)
  target_link_libraries (test_tsdata PRIVATE monsoon_dirhistory)
  target_link_libraries (test_tsdata PRIVATE UnitTest++)
  target_link_libraries (test_replacement_map PRIVATE monsoon_dirhistory)
  target_link_libraries (test_replacement_map PRIVATE UnitTest++)
  add_test (tsdata test_tsdata "${CMAKE_CURRENT_SOURCE_DIR}")
  add_test (replacement_map test_replacement_map "${CMAKE_CURRENT_SOURCE_DIR}")
endif ()
