include(CTest)
find_package(UnitTest++)

if (UnitTest++_FOUND)
  include_directories(${UTPP_INCLUDE_DIRS})

  add_executable (test_tsdata tsdata.cc tsdata_cpp.cc)
  add_executable (test_replacement_map replacement_map.cc)
  add_executable (test_wal_record wal_record.cc)
  add_executable (test_wal_region wal_region.cc)
  add_executable (test_txfile txfile.cc)
  target_link_libraries (test_tsdata PRIVATE monsoon_dirhistory)
  target_link_libraries (test_tsdata PRIVATE UnitTest++)
  target_link_libraries (test_replacement_map PRIVATE monsoon_dirhistory)
  target_link_libraries (test_replacement_map PRIVATE UnitTest++)
  target_link_libraries (test_wal_record PRIVATE monsoon_dirhistory)
  target_link_libraries (test_wal_record PRIVATE UnitTest++)
  target_link_libraries (test_wal_region PRIVATE monsoon_dirhistory)
  target_link_libraries (test_wal_region PRIVATE UnitTest++)
  target_link_libraries (test_txfile PRIVATE monsoon_dirhistory)
  target_link_libraries (test_txfile PRIVATE UnitTest++)
  add_test (tsdata test_tsdata "${CMAKE_CURRENT_SOURCE_DIR}")
  add_test (replacement_map test_replacement_map)
  add_test (wal_record test_wal_record)
  add_test (wal_region test_wal_region)
  add_test (txfile test_txfile)
endif ()
